Fix drag and drop and selecting bodies on mobile

--- a/src/components/draggable/DraggableBody.scss
+++ b/src/components/draggable/DraggableBody.scss
@@ -4,4 +4,8 @@
   position: relative;
   z-index: 5;
   cursor: pointer;
+
+  &.is-dragging {
+    opacity: 0.3;
+  }
 }
