--- a/src/components/editor/Editor.scss
+++ b/src/components/editor/Editor.scss
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100svh;
   cursor: crosshair;
+  touch-action: none;
   .konva-container {
     width: 100vw;
     height: 100svh;
