--- a/src/components/toolbar/Toolbar.scss
+++ b/src/components/toolbar/Toolbar.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   transition: opacity 0.1s ease-out;
   overflow: hidden;
+  touch-action: none;
   @include tablet {
     width: fit-content;
   }
